[ntp4] Prevent the page switcher from overlapping the bookmarks-page title header.
BUG=92921, 93347
TEST=manual
Review URL: http://codereview.chromium.org/7674001

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@97354 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 3cfc69e6e0a882a2ad644df7623f07fce4579689

--- a/chrome/browser/resources/ntp4/new_tab.css
+++ b/chrome/browser/resources/ntp4/new_tab.css
@@ -201,10 +201,11 @@ html[dir='rtl'] #attribution {
 .page-switcher {
   background-color: transparent;
   border: none;
+  bottom: 0;
   font-size: 40px;
-  height: 100%;
   padding: 0;
   position: absolute;
+  margin: 0;
   max-width: 150px;
   min-width: 90px;
   opacity: 0.3;
